更新页面及报错信息

--- a/src/main/resources/templates/admin/header.html
+++ b/src/main/resources/templates/admin/header.html
@@ -29,7 +29,7 @@
                 </a>
             </div>
             <div class="pull-left" style="padding-left: 10px;">
-                <span style="font-size: 28px; color: #2f353f; line-height: 50px;">茗薇美术</span>
+                <span style="font-size: 28px; color: #2f353f; line-height: 50px;">颖火虫✞茗薇</span>
             </div>
         </div>
     </div>
