--- a/src/main/resources/templates/themes/default/footer.html
+++ b/src/main/resources/templates/themes/default/footer.html
@@ -42,11 +42,13 @@
                         <br/>
                         <p>&copy; 版权所有 <a href="https://github.com/ZHENFENG13/My-Blog" target="_blank"
                                           rel="nofollow">颖火虫</a> 保留一切权利
+                            <br/>
+                            <a href="http://www.miitbeian.gov.cn/" target="_blank">沪ICP17054782号</a>
                         </p>
                         <br/>
-                        <th:block th:if="${option}!=null and ${option.getValue()}!=''">
-                            <p th:text="${option.getValue()}"></p>
-                        </th:block>
+                        <!--<th:block th:if="${option}!=null and ${option.getValue()}!=''">
+                           <p th:text="${option.getValue()}"></p>
+                        </th:block>-->
                     </div>
                 </div>
             </div>
