--- a/src/main/resources/templates/themes/default/index.html
+++ b/src/main/resources/templates/themes/default/index.html
@@ -5,32 +5,56 @@
 <div class="main-content index-page clearfix">
     <div class="post-lists">
         <div class="post-lists-body">
-            <div class="post-list-item" th:each="article: ${articles.list}">
+            <div class="post-list-item" >
                 <div class="post-list-item-container">
-                    <a th:href="${commons.permalink(article)}" class="item-thumb  bg-deepgrey"
-                       th:style="'background-image:url('+@{${commons.show_thumb(article)}}+');'">
-                        <dir class="item-desc" th:text="${article.tags}"></dir>
+                    <a th:href="@{minwei/1}" class="item-thumb  bg-deepgrey"
+                       th:style="'background-image:url(/user/img/apple-touch-icon.jpg);'">
+                        <dir class="item-desc" th:text="茗薇美术"></dir>
                     </a>
-                    <div class="item-slant reverse-slant &lt; bg-deepgrey"></div>
+<!--                    <div class="item-slant reverse-slant &lt; bg-deepgrey"></div>-->
                     <div class="item-slant"></div>
                     <div class="item-label">
-                        <div class="item-title"><a th:href="${commons.permalink(article)}"
-                                                   th:text="${article.title}"></a>
+                        <div class="item-title" align="center"><a th:href="@{minwei/1}"
+                                                   th:text="茗薇美术"></a>
                         </div>
-                        <div class="item-meta clearfix">
-                            <div th:class="'item-meta-ico '+ ${commons.show_icon(article.cid)}"
-                                 th:style="'background: url('+@{/user/img/bg-ico.png}+');no-repeat;background-size: 40px auto;' "></div>
-                            <div class="item-meta-cat" th:utext="${commons.show_categories(article.categories)}">
-                            </div>
+                    </div>
+                </div>
+            </div>
+            <div class="post-list-item" >
+                <div class="post-list-item-container">
+                    <a th:href="@{firefly/1}" class="item-thumb  bg-deepgrey"
+                       th:style="'background-image:url(/user/img/logo_1.png);'">
+                        <dir class="item-desc" th:text="颖火虫"></dir>
+                    </a>
+<!--                    <div class="item-slant reverse-slant &lt; bg-deepgrey"></div>-->
+                    <div class="item-slant"></div>
+                    <div class="item-label">
+                        <div class="item-title" align="center"><a th:href="@{firefly/1}"
+                                                   th:text="颖火虫"></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="post-list-item" >
+                <div class="post-list-item-container">
+                    <a th:href="@{vismin/1}" class="item-thumb  bg-deepgrey"
+                       th:style="'background-image:url(/user/img/vismin.png);'">
+                        <dir class="item-desc" th:text="设计"></dir>
+                    </a>
+<!--                    <div class="item-slant reverse-slant &lt; bg-deepgrey"></div>-->
+                    <div class="item-slant"></div>
+                    <div class="item-label">
+                        <div class="item-title" align="center"><a th:href="@{vismin/1}"
+                                                   th:text="设计"></a>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div class="lists-navigator clearfix">
+<!--    <div class="lists-navigator clearfix">
         <div th:replace="comm/macros::pageNav(${articles},'←','→','page')"></div>
-    </div>
+    </div>-->
 </div>
 </body>
 <div th:replace="themes/default/footer::footer"></div>
