--- a/src/main/resources/templates/themes/default/index.html
+++ b/src/main/resources/templates/themes/default/index.html
@@ -7,7 +7,7 @@
         <div class="post-lists-body">
             <div class="post-list-item" >
                 <div class="post-list-item-container">
-                    <a th:href="@{minwei/1}" class="item-thumb  bg-deepgrey"
+                    <a th:href="@{minwei/1}" class="item-thumb  bg-green"
                        th:style="'background-image:url(/user/img/apple-touch-icon.jpg);'">
                         <dir class="item-desc" th:text="茗薇美术"></dir>
                     </a>
@@ -22,7 +22,7 @@
             </div>
             <div class="post-list-item" >
                 <div class="post-list-item-container">
-                    <a th:href="@{firefly/1}" class="item-thumb  bg-deepgrey"
+                    <a th:href="@{firefly/1}" class="item-thumb  bg-green"
                        th:style="'background-image:url(/user/img/logo_1.png);'">
                         <dir class="item-desc" th:text="颖火虫"></dir>
                     </a>
@@ -37,7 +37,7 @@
             </div>
             <div class="post-list-item" >
                 <div class="post-list-item-container">
-                    <a th:href="@{vismin/1}" class="item-thumb  bg-deepgrey"
+                    <a th:href="@{vismin/1}" class="item-thumb  bg-green"
                        th:style="'background-image:url(/user/img/vismin.png);'">
                         <dir class="item-desc" th:text="设计"></dir>
                     </a>
